--- a/pfs/SAR-GSLC/requirements.yaml
+++ b/pfs/SAR-GSLC/requirements.yaml
@@ -3,8 +3,7 @@
     # todo: most of the general metadata is product metadata - this should potentially be merged.
     - metadata/traceability
     - metadata/machine-readability
-    - metadata/product-type
-    - metadata/license
+    - metadata/product-type-sar
     - metadata/pfs-url
     - metadata/time
 - category: source-metadata
@@ -33,10 +32,26 @@
     - metadata/image-size
     - metadata/pixel-coordinate-convention
     - metadata/crs
+    - metadata/radar-unit-look-vector
+    - metadata/slant-range
+    - metadata/orbit-reference-gslc
 - category: per-pixel-metadata
   requirements:
-    - cloud-optimized-formats
-    - per-pixel-metadata/acquisition-id # 2.8
+    - cloud-optimized-formats # todo: this is new from the category description
+    - metadata/machine-readability
+    - per-pixel-metadata/data-mask
+    - per-pixel-metadata/scattering-area
+    - per-pixel-metadata/local-incident-angle
+    - per-pixel-metadata/ellipsoidal-incident-angle
+    - per-pixel-metadata/noise-power
+    - per-pixel-metadata/gamma-sigma-ratio
+    - per-pixel-metadata/acquisition-id
+    - per-pixel-metadata/dem
+    - per-pixel-metadata/radar-unit-look-vector-grid
+    - per-pixel-metadata/slant-range
+    - per-pixel-metadata/insar-phase-uncertainty
+    - per-pixel-metadata/atmospheric-phase-correction
+    - per-pixel-metadata/ionospheric-phase-correction
 - category: radiometrically-corrected-measurements
   requirements:
     - cloud-optimized-formats
