--- a/requirements/measurements/backscatter-nrb.yaml
+++ b/requirements/measurements/backscatter-nrb.yaml
@@ -2,6 +2,7 @@ title: Backscatter Measurements \[NRB]
 description: 
 threshold: 
   # todo: the list of file format specifications below comes up more often and should be a separate building block
+  # todo: is the * behind linar power pointing to the note? Should be a footnote then?
   description: |-
     “Terrain-flattened” Radiometrically Terrain Corrected (RTC) Gamma-Nought backscatter coefficient ($\gamma^0_T$) is provided for each polarization.
 
