--- a/requirements/measurements/backscatter-orb.yaml
+++ b/requirements/measurements/backscatter-orb.yaml
@@ -2,6 +2,7 @@ title: Backscatter Measurements \[ORB]
 description: 
 threshold: 
   # todo: the list of file format specifications below comes up more often and should be a separate building block
+  # todo: is the * behind linar power pointing to the note? Should be a footnote then?
   description: |-
     Geoid-corrected Sigma-Nought backscatter coefficient ($\sigma^0$) is provided for each polarization. 
 
