Add measurement requirements

--- a/glossary/si.yaml
+++ b/glossary/si.yaml
@@ -1,2 +1,3 @@
 term: SI
-description: International System of Units
+description: |-
+  International System of Units, internationally known by the abbreviation SI (from French Système international d'unités)
