--- a/pfs/SAR-ORB/requirements.yaml
+++ b/pfs/SAR-ORB/requirements.yaml
@@ -51,8 +51,11 @@
   requirements:
     - cloud-optimized-formats
     - measurements/backscatter-orb # 3.1
+    - metadata/scaling-conversion # 3.2
+    - metadata/noise-removal # 3.3
+    - metadata/radiometric-accuracy # 3.5
     - measurements/mean-wind-normalised-backscatter # 3.6
 - category: geometric-corrections
   requirements:
     - metadata/geometric-correction-algorithm # 4.1
-    - corrections/dem
+    - corrections/dem # 4.2
