--- a/requirements/metadata/look-direction-polynomials.yaml
+++ b/requirements/metadata/look-direction-polynomials.yaml
@@ -2,10 +2,9 @@ title: Look Direction Polynomials
 description: 
 threshold:
   # todo: reference item 2.11
-  # todo: "coefficients ai necessary" - ai => is?
   # todo: [m, deg, arcsec] seem XML encoding specific, should be described in general (e.g., meters, degree, arcsecond).
   description: |-
-    In case the Look Direction Image (see [@per-pixel-metadata/look-direction]) is **not** provided, then a list of the polynomial coefficients ai necessary to reconstruct the look direction angle[^look-direction-angle], together with an estimate of the added error from use of polynomial vs. per-pixel more accurate values, shall be provided.
+    In case the Look Direction Image (see [@per-pixel-metadata/look-direction]) is **not** provided, then a list of the polynomial coefficients are necessary to reconstruct the look direction angle[^look-direction-angle], together with an estimate of the added error from use of polynomial vs. per-pixel more accurate values, shall be provided.
 
     Example polynomial:
 
