Move requirement to the right place

--- a/pfs/SAR-POL/requirements.yaml
+++ b/pfs/SAR-POL/requirements.yaml
@@ -29,6 +29,7 @@
     - metadata/enl
     - metadata/resolution
     - metadata/speckle-filtering
+    - metadata/pol-filtering
     - metadata/bounding-box
     - metadata/footprint
     - metadata/image-size
