--- a/requirements/metadata/slant-range.yaml
+++ b/requirements/metadata/slant-range.yaml
@@ -3,11 +3,11 @@ description:
 threshold:
   description: |-
     Slant range distance from the sensor to the surface, specified at centre of scene. 
-    Only required if a Slant Range Sensor to Surface Image (see [@per-pixel-metadata/slant-range]) is **not** provided. 
+    Only required if a Slant Range Sensor to Surface Image (see [@per-pixel/slant-range]) is **not** provided. 
   notes:
 goal: null
 dependencies:
-  - per-pixel-metadata/slant-range
+  - per-pixel/slant-range
 glossary:
 references:
 metadata:
