Fix requirement titles

--- a/requirements/metadata/noise-removal.yaml
+++ b/requirements/metadata/noise-removal.yaml
@@ -1,4 +1,4 @@
-title: 
+title: Noise Removal
 description: 
 threshold:
   # todo: The "(Y/N)" is implementation (and metadata language) specific, should not be listed here.
