--- a/requirements/metadata/orbit-reference-nrb-pol.yaml
+++ b/requirements/metadata/orbit-reference-nrb-pol.yaml
@@ -1,4 +1,4 @@
-title: 
+title: Reference Orbit
 description: |-
   **Usage: Only when Flattened phase per-pixel metadata (see [@measurements/flattened-phase]) is provided.**
 threshold: null
