--- a/sections/requirement-categories/general-metadata.yaml
+++ b/sections/requirement-categories/general-metadata.yaml
@@ -1,4 +1,4 @@
-id: general
+id: meta
 title: General Metadata
 description: |-
   These are metadata records describing a distributed collection of pixels.
