--- a/sections/requirement-categories/per-pixel-metadata.yaml
+++ b/sections/requirement-categories/per-pixel-metadata.yaml
@@ -1,4 +1,4 @@
-id: per-pixel
+id: pxl
 title: Per-Pixel Metadata
 description: |-
   The following minimum metadata specifications apply to each pixel.
