--- a/sections/requirement-categories/product-metadata.yaml
+++ b/sections/requirement-categories/product-metadata.yaml
@@ -1,4 +1,4 @@
-id: product
+id: prd
 title: Product Metadata
 description: |-
    Information related to the CEOS-ARD product generation procedure and geographic parameters.
