--- a/sections/requirement-categories/radiometric-atmospheric-corrections.yaml
+++ b/sections/requirement-categories/radiometric-atmospheric-corrections.yaml
@@ -1,4 +1,4 @@
-id: corrections
+id: rac
 title: Radiometric and Atmospheric Corrections
 description: |-
   The following requirements must be met for all pixels in a collection.
