--- a/sections/requirement-categories/radiometrically-corrected-measurements.yaml
+++ b/sections/requirement-categories/radiometrically-corrected-measurements.yaml
@@ -1,4 +1,4 @@
-id: measurements
+id: rcm
 title: Radiometrically Corrected Measurements
 description: |-
   The requirements indicate the necessary outcomes and, to some degree, the minimum steps necessary to be deemed to have achieved those outcomes.
