--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
         run: echo ${{ github.event.number }}
   deploy-latest:
     if: >
-      github.ref == 'refs/heads/master'
+      github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: generate
     steps:
