Add version numbers to PFS

--- a/pfs/NLSR/document.yaml
+++ b/pfs/NLSR/document.yaml
@@ -1,5 +1,6 @@
 id: NLSR
 title: Nighttime Light Surface Radiance
+version: 1.1-draft
 type: Optical
 applies_to: |-
   Data collected with nighttime light sensors operating in the VIS/NIR wavelengths.
