--- a/pfs/SAR-NRB/document.yaml
+++ b/pfs/SAR-NRB/document.yaml
@@ -1,5 +1,6 @@
 id: SAR-NRB
 title: Normalised Radar Backscatter
+version: 1.2-draft
 type: Synthetic Aperture Radar
 applies_to: |-
   This PFS is specifically aimed at users interested in exploring the potential of SAR but who may lack the expertise or facilities for SAR processing.
