--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,23 @@
 name: CI
 on:
-  - push
-  - pull_request
+  push:
+    paths:
+      - 'assets/**'
+      - 'glossary/**'
+      - 'pfs/**'
+      - 'references/**'
+      - 'requirements/**'
+      - 'sections/**'
+      - 'templates/**'
+  pull_request_target:
+    paths:
+      - 'assets/**'
+      - 'glossary/**'
+      - 'pfs/**'
+      - 'references/**'
+      - 'requirements/**'
+      - 'sections/**'
+      - 'templates/**'
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -46,6 +62,8 @@ jobs:
         with:
           name: documents
           path: build
+      - name: PR number
+        run: echo ${{ github.event.number }}
   deploy-latest:
     if: >
       github.ref == 'refs/heads/main'
@@ -66,3 +84,52 @@ jobs:
           destination_dir: latest
           commit_message: Deploy latest version of PFS documents
           exclude_assets: '{assets/**,*.{md,bib}}'
+  deploy-pr:
+    if: github.event.number
+    runs-on: ubuntu-latest
+    needs: generate
+    steps:
+      - name: Download PFS artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: documents
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path: documents/
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ftp.ceos-ard-preview.mohr.ws
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: documents/
+          server-dir: pr-${{ github.event.number }}/
+          exclude: '{assets/**,*.{md,bib}}'
+          dangerous-clean-slate: true
+      - name: Add comment to pull request
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const pullRequestNumber = ${{ github.event.number }};
+            const start = '⚠️';
+            const author = 'github-actions[bot]';
+
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: pullRequestNumber
+            });
+
+            const commentExists = comments.data.some(
+              comment => comment.user.login === author && comment.body.startsWith(start)
+            );
+
+            if (!commentExists) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: pullRequestNumber,
+                body: `${start} A preview for all PFS has been generated and can be accessed here: <https://ceos-ard-preview.mohr.ws/pr-${pullRequestNumber}/>`
+              });
+            } else {
+              console.log(`Preview URL comment already added to PR #${pullRequestNumber}`);
+            }
