Some editorial reverts of low importance

--- a/sections/annexes/sar-general-processing-roadmap.yaml
+++ b/sections/annexes/sar-general-processing-roadmap.yaml
@@ -1,4 +1,4 @@
-title: General Processing Roadmap
+title: General Processing Map
 description: include:sar-general-processing-roadmap
 glossary:
   - dem
