--- a/sections/introduction/difference-threshold-goal.yaml
+++ b/sections/introduction/difference-threshold-goal.yaml
@@ -1,9 +1,9 @@
 title: What is the difference between Threshold and Goal?
 description: |-
-  **Threshold** (or: minimum) requirements are the **minimum** that is needed for the data to be analysis ready.
+  **Threshold** (Minimum) requirements are the **minimum** that is needed for the data to be analysis ready.
   This must be practical and accepted by the data producers.
 
-  **Goal** (or: desired) requirements (previously referred to as “Target”) are the ideal; where we would like to be.
+  **Goal** (Desired) requirements (previously referred to as “Target”) are the ideal; where we would like to be.
   Some providers may already meet these.
 
   Products that meet all _threshold_ requirements should be immediately useful for scientific analysis or decision-making.
