--- a/sections/introduction/what-are-ceos-ard-products.yaml
+++ b/sections/introduction/what-are-ceos-ard-products.yaml
@@ -1,9 +1,9 @@
-title: What are CEOS Analysis Ready Data (CEOS-ARD) products?
+title: What is CEOS Analysis Ready Data?
 description: |-
-  CEOS-ARD products have been processed to a minimum set of requirements and organized into a form that allows immediate analysis with a minimum of additional user effort.
-  These products would be resampled onto a common geometric grid (for a given product) and would provide baseline data for further interoperability both through time and with other datasets.
+  CEOS-ARD are products that have been processed to a minimum set of requirements and organized into a form that allows immediate analysis with a minimum of additional user effort.
+  In general, these products would be resampled onto a common geometric grid (for a given product) and would provide baseline data for further interoperability both through time and with other datasets.
 
-  CEOS-ARD are intended to be flexible and accessible products suitable for a wide range of users for a wide variety of applications, particularly time series analysis and multi-sensor application development.
+  CEOS-ARD products are intended to be flexible and accessible products suitable for a wide range of users for a wide variety of applications, including particularly time series analysis and multi-sensor application development.
   They are also intended to support rapid ingestion and exploitation via high-performance computing, cloud computing and other future data architectures.
   They may not be suitable for all purposes and are not intended as a _replacement_ for other types of satellite products.
 glossary:
