Add additional annex to solve some reference errors

--- a/pfs/SAR-GSLC/document.yaml
+++ b/pfs/SAR-GSLC/document.yaml
@@ -33,4 +33,5 @@ references:
 annexes:
   - sar-general-processing-roadmap
   - sar-topographic-phase-removal
+  - sar-pol-covmat # todo: not specific to GSLC, but added to fix broken cross references
   - sar-gslc-example
