--- a/pfs/SAR-NRB/document.yaml
+++ b/pfs/SAR-NRB/document.yaml
@@ -30,3 +30,4 @@ references:
 annexes:
   - sar-general-processing-roadmap
   - sar-topographic-phase-removal
+  - sar-pol-covmat # todo: not specific to NRB, but added to fix broken cross references
