--- a/pfs/SAR-ORB/document.yaml
+++ b/pfs/SAR-ORB/document.yaml
@@ -26,4 +26,5 @@ references:
 annexes:
   - sar-general-processing-roadmap
   - sar-topographic-phase-removal
+  - sar-pol-covmat # todo: not specific to ORB, but added to fix broken cross references
   - sar-orb-example
