--- a/requirements/metadata/crs.yaml
+++ b/requirements/metadata/crs.yaml
@@ -1,5 +1,5 @@
-# todo
-title: Coordinate Reference System
+# todo: remove product data mentions to be resuable in other products
+title: Product Coordinate Reference System
 description:
 threshold:
   description: |-
