--- a/requirements/metadata/enl.yaml
+++ b/requirements/metadata/enl.yaml
@@ -1,4 +1,5 @@
-title: Equivalent Number of Looks 
+# todo: remove product data mentions to be resuable in other products
+title: Product Equivalent Number of Looks 
 description: 
 threshold: null
 goal:
