--- a/requirements/metadata/image-size.yaml
+++ b/requirements/metadata/image-size.yaml
@@ -1,11 +1,13 @@
-title: Image Size
+# todo: remove product data mentions to be resuable in other products
+# todo: remove mention of CEOS-ARD to be reusable outside of CEOS
+title: Product Image Size
 description: 
 threshold:
   # todo: this is a mixture of requirements.
   # file header size seems obsolete, handled by tooling.
   # number of no-data border pixels has not really a direct relation with the image size?!
   description: |-
-    Image attributes:
+    Image attributes of the CEOS-ARD product:
 
     - Number of lines
     - Number of pixels per line
