--- a/requirements/metadata/orbit.yaml
+++ b/requirements/metadata/orbit.yaml
@@ -1,4 +1,5 @@
-title: Orbit Information
+# todo: remove source data mentions to be resuable in other products
+title: Source Data Orbit Information
 description: 
 threshold:
   description: |-
@@ -11,6 +12,8 @@ threshold:
   notes:
 goal:
   description: |-
+    As threshold, including also:
+
     - Platform heading angle expressed in degrees (0-360) from North 
     - Orbit data file containing state vectors (minimum of 5 state vectors, from 10% of scene length before start time to 10% of scene length after stop time) 
     - Platform (mean) altitude
