--- a/requirements/metadata/scaling-conversion.yaml
+++ b/requirements/metadata/scaling-conversion.yaml
@@ -5,7 +5,8 @@ threshold:
     If applicable, indicate the equation to convert pixel linear amplitude/power to logarithmic decibel scale, including, if applicable, the associated calibration (dB offset) factor, and/or the equation used to convert compressed data (int8/int16/float16) to float32.
   notes:
 goal:
-  description: Use of float32.
+  description: |-
+    As threshold, but use of float32.
   notes:
 dependencies:
 glossary:
