--- a/sections/requirement-categories/radiometrically-corrected-measurements.yaml
+++ b/sections/requirement-categories/radiometrically-corrected-measurements.yaml
@@ -1,3 +1,4 @@
+# todo: remove cloud-optimized requirement and enable the cloud-optimized-formats requirement instead.
 id: rcm
 title: Radiometrically Corrected Measurements
 description: |-
@@ -5,5 +6,7 @@ description: |-
   Radiometric corrections must lead to normalised measurement(s) of backscatter intensity and/or decomposed polarimetric parameters.
   As for the per-pixel metadata, information regarding data format specification needs to be provided for each record.
   The requirements below must be met for all pixels/samples/observations in a collection.
+
+  *Cloud optimized file formats are recommended.*
 glossary:
 references:
