--- a/pfs/SAR-NRB/requirements.yaml
+++ b/pfs/SAR-NRB/requirements.yaml
@@ -37,7 +37,7 @@
     - metadata/orbit-reference-nrb-pol
 - category: per-pixel-metadata
   requirements:
-    - cloud-optimized-formats # todo: this is new from the category description
+    # - cloud-optimized-formats
     - metadata/machine-readability
     - per-pixel/data-mask
     - per-pixel/scattering-area
@@ -49,7 +49,7 @@
     - per-pixel/dem
 - category: radiometrically-corrected-measurements
   requirements:
-    - cloud-optimized-formats
+    # - cloud-optimized-formats
     - measurements/backscatter-nrb
     - metadata/scaling-conversion
     - metadata/noise-removal
