--- a/requirements/metadata/machine-readability.yaml
+++ b/requirements/metadata/machine-readability.yaml
@@ -2,11 +2,11 @@ title: Metadata Machine Readability
 description:
 threshold:
   description: |-
-    Metadata is provided in a structure that enables a computer algorithm to be used consistently and to automatically identify and extract each component part for further use.
+    Metadata is provided in a structure that enables a computer algorithm to be used to consistently and automatically identify and extract each component/variable/layer for further use.
   notes:
 goal:
   description: |-
-    Metadata is formatted in accordance with CEOS-ARD SAR Metadata Specifications, v.1.1, or in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2, Climate and Forecast (CF) convention, the Attribute Convention for Data Discovery (ACDD), etc.
+    As threshold, but metadata is formatted in accordance with CEOS-ARD SAR Metadata Specifications, v.1.1, or in a community endorsed standard that facilitates machine-readability, such as ISO 19115-2, Climate and Forecast (CF) convention, the Attribute Convention for Data Discovery (ACDD), etc.
   notes:
 dependencies:
 glossary:
