--- a/requirements/metadata/pol-filtering.yaml
+++ b/requirements/metadata/pol-filtering.yaml
@@ -1,9 +1,8 @@
 title: Polarimetric Filtering
 description: 
 threshold:
-  # todo: This is a requirement, but it is not enforced? "should" is optional language, "shall" is required language.
   description: |-
-    Advanced polarimetric filter preserving covariance matrix properties should be applied.
+    Advanced polarimetric filter preserving covariance matrix properties shall be applied.
   notes:
 goal: null
 dependencies:
