--- a/requirements/per-pixel/local-incident-angle.yaml
+++ b/requirements/per-pixel/local-incident-angle.yaml
@@ -13,7 +13,7 @@ threshold:
     - Byte Order
   # todo: The note seems ORB specific, should only be visible in ORB PFS
   notes:
-    - For maritime ORB scenes when no land areas are covered, a geoid model could be used for the calculation of the local incident angle
+    - For maritime ORB scenes when no land areas are covered, a geoid model could be used for the calculation of the local incident angle.
 goal: null
 dependencies:
 glossary:
