--- a/sections/requirement-categories/per-pixel-metadata.yaml
+++ b/sections/requirement-categories/per-pixel-metadata.yaml
@@ -1,8 +1,11 @@
+# todo: remove cloud-optimized requirement and enable the cloud-optimized-formats requirement instead.
 id: pxl
 title: Per-Pixel Metadata
 description: |-
   The following minimum metadata specifications apply to each pixel.
   Whether the metadata are provided in a single record relevant to all pixels or separately for each pixel is at the discretion of the data provider.
   Per-pixel metadata should allow users to discriminate between (choose) observations on the basis of their individual suitability for applications.
+
+  *Cloud optimized file formats are recommended.*
 glossary:
 references:
