--- a/requirements/per-pixel/ellipsoidal-incident-angle.yaml
+++ b/requirements/per-pixel/ellipsoidal-incident-angle.yaml
@@ -1,6 +1,7 @@
 title: Ellipsoidal Incident Angle Image
 description: 
-threshold:
+threshold: null
+goal:
   description: |-
     Ellipsoidal incident angle is provided.
 
@@ -14,8 +15,7 @@ threshold:
     - Reference Ellipsoid Name
   # todo: The note seems ORB specific, should only be visible in ORB PFS
   notes:
-    - For maritime ORB scenes when no land areas are covered, a geoid model could be used for the calculation of the local incident angle
-goal: null
+    - For maritime ORB scenes when no land areas are covered, the ellipsoidal incident angle is nearly identical to the geoid based local incident angle.
 dependencies:
 glossary:
   - orb
